--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
       <div class="bar">
         <select id="listSelect">
           <option value="gre_list1.json">List 1</option>
+          <option value="gre_list5.json">List 5</option>
         </select>
         <button id="loadBtn">Load</button>
         <input id="uploadInput" type="file" accept=".json" />
