--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
       <div class="bar">
         <select id="listSelect">
           <option value="gre_list1.json">List 1</option>
-          <option value="gre_list5.json">List 5</option>
+          <option value="gre_list5.json">List 5-1</option>
+          <option value="gre_list5-2.json">List 5-2</option>
         </select>
         <button id="loadBtn">Load</button>
         <input id="uploadInput" type="file" accept=".json" />
