--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
           <option value="gre_list1.json">List 1</option>
           <option value="gre_list5.json">List 5-1</option>
           <option value="gre_list5-2.json">List 5-2</option>
+          <option value="gre_list4.json">List 4</option>
         </select>
         <button id="loadBtn">Load</button>
         <input id="uploadInput" type="file" accept=".json" />
